# cutomer_support_agent_live

./: LICENSE  README.md  app.py  pyproject.toml
customer_support_agent/api/: dependencies.py
customer_support_agent/core/: settings.py
customer_support_agent/observability/: __init__.py  tracer.py
customer_support_agent/schemas/: api.py
customer_support_agent/services/: copilot_service.py  guardrails_service.py
evals/: _test_support.py  run_eval_report.py  test_full_eval.py
evals/dataset/: golden.json
evals/reports/: latest.json  latest.md
notebooks/: experiments.ipynb
