[project]
name = "customer-support-agent"
version = "0.1.0"
description = "AI copilot for support agents with FastAPI, LangChain, Mem0, and ChromaDB"
readme = "Plan.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "python-dotenv",
  "langchain",
  "langchain-core",
  "langchain-groq",
  "langchain-text-splitters",
  "mem0ai[extras,nlp]",
  "chromadb",
  "streamlit",
  "requests",
  "email-validator",
  "google-genai",
  "spacy>=3.7",
  # Optional local embedding stack (disabled to keep EC2 image size low):
  # "sentence-transformers",
  # "torch",
  "ipykernel>=7.3.0",
  "jupyter>=1.1.1",
  "guardrails-ai>=0.10.2",
]

[tool.uv]
package = false

# Optional torch CPU index (enable only if uncommenting "torch" above):
# [tool.uv.sources]
# torch = { index = "pytorch-cpu" }
#
# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

[dependency-groups]
dev = [
  "playwright>=1.58.0",
  "pytest",
  "ragas>=0.2",
  "deepeval>=1.0",
  "rapidfuzz>=3.10",
]

[tool.pytest.ini_options]
markers = [
  "full_eval: marks the full RAG + agent evaluation suite",
]
filterwarnings = [
  "ignore:Importing NonLLMContextPrecisionWithReference from 'ragas.metrics' is deprecated:DeprecationWarning",
  "ignore:.*LangchainEmbeddingsWrapper is deprecated.*:DeprecationWarning",
  "ignore:.*LangchainLLMWrapper is deprecated.*:DeprecationWarning",
]
